--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 body {
     color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
@@ -22,19 +28,20 @@ header {
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 
 header h1 { 
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
     text-align: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav{
@@ -57,14 +64,14 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     border-radius: 15px;
     text-shadow: none;
 }
 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -114,7 +121,7 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
@@ -164,12 +171,75 @@ section {
 }
 
 .hero-form button {
-    color: #fce138;
+    color: var(--primary-color);
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 10px;
+}
+
+.checkbox-wrapper input,
+.radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label,
+.radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before,
+.radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255,255,255, .75);
+    border: 1px solid #024e76;
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+}
+
+.checkbox-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+    content: none;
+}
+
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after {
+    content: "";
 }
 
 .intro p {
@@ -182,7 +252,7 @@ section {
 }
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .section-title {
@@ -196,7 +266,7 @@ section {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-color {
@@ -267,7 +337,7 @@ section {
     margin: 20px;
     flex: 1;
     background: #024e76;
-    color: #fce138;
+    color: var(--primary-color);
 }
   
 .trainer img {
@@ -298,7 +368,7 @@ section {
 }
   
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
   
 .contact-info {
@@ -321,7 +391,7 @@ section {
 }
   
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
   
@@ -356,7 +426,7 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     text-align: center;
     padding: 15px 0;
@@ -365,12 +435,12 @@ section {
 }
 
 .contact-form button:hover {
-    color: #fce138;
+    color: var(--primary-color);
     background: #39a6b2;
 }
   
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .hero-secondary {
